# armlib

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
app/armCmd/: armZ1.cpp  main.cpp
armCpp/: CMakeLists.txt
armCpp/src/: armLib.cpp  armMng.cpp  armTcp.cpp
dep/: z1_sdk
inc/arm/: armLib.h  armTcp.h  armZ1.h
py/client/: manual_joints.py
py/mycobot/: .gitignore  armMC.py  armMC_srvr.py  armMyCobot.py  armMyCobotClnt.py  armMyCobotSrvr.py  port_setup.py  pyarmlib  server.py  server_mc.py
py/mycobot/test/: myCobot_server.py  port_setup.py  t_client.py  t_client_tmp.py  t_pick.py  t_pick_IK.py  t_pick_place.py  t_pick_place2.py  t_reader.py  t_send_coord.py
py/mycobot/test/bak/: t_pick_place.py
py/mycobot_apps/: server.py
py/pyarmlib/: armGui.py  armLib.py  armMyCobot.py  armServer.py  armTcp.py  gui_joints.py  gui_st.py  gui_tip.py  test.py  test_proc.py  tmp.sh  utils.py  widgets.py
ros/: build.sh  env.sh  run_server.sh  run_test.sh
ros/arm_ros/: CMakeLists.txt  package.xml
ros/arm_ros/dep/: armCpp  utlib  vsnlib
ros/arm_ros/inc/: arm  arm_ros.h  arm_ros_test.h
ros/arm_ros/node/: CMakeLists.txt  dep
ros/arm_ros/node/inc/: arm  arm_ros.h  arm_ros_test.h
ros/arm_ros/node/src/: arm_ros.cpp
ros/arm_ros/node/src/server/: arm_ros_svr.cpp
ros/arm_ros/node/src/test/: arm_ros_test.cpp
ros/arm_ros/src/: arm_ros.cpp
ros/arm_ros/src/test/: arm_ros_test.cpp
ros/dep/: armCpp  utlib  vsnlib
ros/pkgs/: arm_ros
src/: armCmd.cpp  armLib.cpp  armMng.cpp  armTcp.cpp  armZ1.cpp
test/: CMakeLists.txt  README.md  armTest.cpp  main.cpp
test/app/armCmd/: main.cpp
test/cmds/: set_joints.txt
test/inc/arm/: armLib.h  armTcp.h  armTest.h
test/py/: t_arm_client.py
test/src/: armLib.cpp  armTcp.cpp
